--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,17 +1,3 @@
 spring:
-  application:
-    name: DRUGMED-SERVICE
-
-  datasource:
-    url: jdbc:postgresql://localhost:5433/drug
-    username: asdf
-    password: asdf
-  jpa:
-    hibernate:
-      ddl-auto: update
-      format-sql: true
-    show-sql: true
-
-  output:
-    ansi:
-      enabled: always
+  profiles:
+    active: dev
